# sap-field-atlas

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-sap-object.md  config.yml  fill-atlas-gap.md  verify-sap-object.md
.github/workflows/: ci.yml
data/: domains.yaml  fields.yaml  migration_templates.yaml  relationships.yaml  tables.yaml  transactions.yaml
docs/: ARCHITECTURE.md  ATLAS_FILL_LOOP.md  HERO_GUIDELINES.md  MAINTAINER_CHECKLIST.md  PACKAGE.md  REPO_COMPLETE.md  ROADMAP.md  label-alias-value-source-model.md  source-confidence-policy.md
docs/releases/: v0.1.0.md
docs/templates/: atlas-fill-task.md  go-loop-atlas-campaign.md
examples/: README.md  explain-mara-matnr.md  explain-se16n.md
schemas/: README.md  domain.schema.yaml  field.schema.yaml  fiori_app.schema.yaml  migration_template.schema.yaml  relationship.schema.yaml  table.schema.yaml  transaction.schema.yaml
scripts/: README.md  atlas_gap_report.py  validate_repository.py
skills/: README.md  explain-sap-object.md  fill-atlas-gap-loop.md
src/sap_field_atlas/: cli.py  validation.py
tests/: test_cli.py  test_repository_guard.py  test_validation_contracts.py
