[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sap-field-atlas"
version = "0.1.0"
description = "Agent-ready SAP Field Atlas for data migration consultants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
sap-field-atlas = "sap_field_atlas.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
