[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sap-field-atlas"
version = "0.1.0"
description = "Agent-ready SAP Field Atlas for data migration consultants"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Viggo Meesters" }]
keywords = ["sap", "data-migration", "knowledge-base", "yaml", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Documentation",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/viggomeesters/sap-field-atlas"
Repository = "https://github.com/viggomeesters/sap-field-atlas"
Issues = "https://github.com/viggomeesters/sap-field-atlas/issues"

[project.scripts]
sap-field-atlas = "sap_field_atlas.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
